fix overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Lato', sans-serif;
+    flex: 1;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .nav {
@@ -28,6 +31,7 @@ a {
 
   .links {
     margin-left: auto;
+
   }
 
   .header {
@@ -35,6 +39,7 @@ a {
     padding-left: 12em;
     padding-right: 12em;
     background-color: #f2ede7;
+    max-width: 100%;
     
   }
 
@@ -43,12 +48,14 @@ a {
     display: flex;
     align-items: center;
     gap: 3em;
+
   }
 .jimmy {
     width: 420px;
     height: auto;
     border: 5px solid #a8815d;
     margin-left: 90px;
+    display: flex;
 }
 
 html, body {
@@ -79,6 +86,8 @@ html, body {
   border-radius: 15px;
   color:#f2ede7;
   font-weight: bold;
+  flex-shrink: 0;
+  max-height: 100px;
 }
 
 .news {
@@ -92,6 +101,7 @@ html, body {
   gap: 2em;
   margin-bottom: 5em;
   flex: 1;
+  flex-wrap: wrap;
 
 }
 .report_image {
@@ -125,6 +135,7 @@ html, body {
   padding: 6em;
   display: flex;
   justify-content: center;
+  min-width: 500px;
 
 }
 
@@ -162,7 +173,8 @@ html, body {
   padding: 3em 5em;
   background-color: #f2ede7;
   border-radius: 15px;
-  border: 5px solid #a8815d
+  border: 5px solid #a8815d;
+  flex-wrap: wrap;
  }
 
  .text_04 {
@@ -181,4 +193,14 @@ html, body {
  .subtext_04 {
   font-family: light italic;
   font-size: 17px;
+ }
+
+ .footer {
+  display: flex;
+  justify-content: center;
+  background-color: #f2ede7
+ }
+ 
+ .copyright {
+  margin: 2em 0;
  }
